--- a/BetterStyling/css/styles.css
+++ b/BetterStyling/css/styles.css
@@ -1,10 +1,14 @@
 body {
-
+    color: #40514E;
     margin: 0;
     text-align: center;
+    
 
 }
-
+p{
+    
+    line-height: 2;
+}
 h1 {
 
     font-size: 90px;
@@ -20,13 +24,20 @@ h2 {
     font-family: sans-serif;
     color: #66BFBF;
     font-weight: normal;
+    padding-bottom: 2px;
     
+}
+hr{
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
 }
 
 h3 {
     font-family: sans-serif;
     color: #11999E;
-
+  
 }  
 
 .code-img{
@@ -47,12 +58,19 @@ h3 {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
 
 
 }
+.contact-mesa{
+    width: 40%;
+    margin: 40px auto 60px;
+}
 
+.intro{
 
+    width: 30%;
+    margin: auto;
+}
 
 .top-container {
     background-color: #222831;
@@ -62,12 +80,13 @@ h3 {
 }
 
 .middle-container {
-
+    margin: 100px 0;
 
 }
 
 .bottom-container {
-
+    background-color: #66BFBF ;
+    padding: 50px 0 20px;
 }
 
 .top-cloud {
@@ -80,4 +99,46 @@ h3 {
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
+.btn {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999e);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999e);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999e);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999e);
+    background-image: linear-gradient(to bottom, #11CDD4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+  a{
+    color :#11999E;
+    font-family: sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+
+  }
+  a:hover{
+    color: #EAF6F6;
+
+  }
+.copy_write{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
 }
